2007-03-06  J. Tang  <jtang@tresys.com>

	* apol_mls_level_create() will now always return an allocated (and
	empty) category vector as part of the level.  Before it would
	initialize the field as NULL.

	* poldiff_avrule_get_unmodified_perms() no longer returns all
	permissions whenever a rule is added or removed; it only returns
	permissions when the form is POLDIFF_FORM_MODIFIED.  The new
	behavior matches the other policy components.

2007-03-05  J. Tang  <jtang@tresys.com>

	* added apol_mls_level_free() and apol_mls_range_get_levels()

2007-03-02  J. Tang  <jtang@tresys.com>

	* qpol_user_get_range() and qpol_user_get_dfltlevel() now return
	NULL if the policy is not MLS.  (It used to return a garbage
	pointer.)

2007-03-01  J. Tang  <jtang@tresys.com>

	* added additional accessors to the seaudit_avc_message_t object.

2007-02-28  J. Tang  <jtang@tresys.com>

	* added apol_mls_level_create_from_mls_level() and
	apol_mls_range_create_from_mls_range() copy constructors.

	* Fixed segfault when libseaudit attempts to parse certain load
	policy messages.

2007-02-23  J. Tang  <jtang@tresys.com>

	* Implemented new sediffx results design.  Results are implemented
	as subclasses of an abstract result_item_t class.  This will allow
	easier future modifications of the sediffx interface.

2007-02-21  J. Tang  <jtang@tresys.com>

	* fixed segfault when opening a policy with
	APOL_POLICY_OPTION_NO_RULES when the policy has an unconditional
	type_transition rule.

2007-02-16  J. Mowery  <jmowery@tresys.com>

	* Moved libqpol/include/qpol/expand.h to libqpol/src/expand.h.
	This header file was never supposed to be visible.

	* added SWIG wrappers to libapol; build system updated.  configure
	must be passed --enable-swig-python to build the wrappers.

2007-02-14  J. Tang  <jtang@tresys.com>

	* sesearch and apol now allow searching range transitions based
	upon the target class.  (Target classes were introduced in version
	21 policies.)
